main-services/otel-demo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-demo-service
  namespace: troubleshootools
  labels:
    app: otel-demo
spec:
  selector:
    name: otel-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
