main-services/otel-demo/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-demo-ingress
  namespace: troubleshootools
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: otel-demo.pinnamon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-demo-service
            port:
              number: 80
